logs/dockerwithgitlabsecrets.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dockerwithgitlabsecrets'...
Compiling './lib/python3.5/site-packages/dockerwithgitlabsecrets/configuration.py'...
***   File "./lib/python3.5/site-packages/dockerwithgitlabsecrets/configuration.py", line 17
    url: str
       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockerwithgitlabsecrets/entrypoint.py'...
***   File "./lib/python3.5/site-packages/dockerwithgitlabsecrets/entrypoint.py", line 18
    DEFAULT_CONFIG_FILE = f"{os.path.expanduser('~')}/.dwgs-config.yml"
                                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dockerwithgitlabsecrets/tests'...
Compiling './lib/python3.5/site-packages/dockerwithgitlabsecrets/tests/test_configuration.py'...
***   File "./lib/python3.5/site-packages/dockerwithgitlabsecrets/tests/test_configuration.py", line 24
    self.assertRaises(ValueError, parse_configuration, f"{self._temp_file_location}_does_not_exist")
                                                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockerwithgitlabsecrets/tests/test_entrypoint.py'...
***   File "./lib/python3.5/site-packages/dockerwithgitlabsecrets/tests/test_entrypoint.py", line 21
    _CONFIG_PARAMETER_FLAG = f"--{CONFIG_PARAMETER}"
                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockerwithgitlabsecrets/tests/test_wrapper.py'...
***   File "./lib/python3.5/site-packages/dockerwithgitlabsecrets/tests/test_wrapper.py", line 24
    ["run", "-e", f"{EXAMPLE_PARAMETER}={EXAMPLE_VALUE}", "--rm", "alpine", "printenv", EXAMPLE_PARAMETER],
                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockerwithgitlabsecrets/wrapper.py'...
***   File "./lib/python3.5/site-packages/dockerwithgitlabsecrets/wrapper.py", line 50
    _logger.warning(f"New line characters in variable with key \"{key}\" have been escaped to \\\\n")
                                                                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dockerwithgitlabsecrets-2.0.1.egg-info'...
Listing './lib/python3.5/site-packages/gitlab'...
Listing './lib/python3.5/site-packages/gitlab/tests'...
Listing './lib/python3.5/site-packages/gitlab/v3'...
Listing './lib/python3.5/site-packages/gitlab/v4'...
Listing './lib/python3.5/site-packages/gitlabbuildvariables'...
Listing './lib/python3.5/site-packages/gitlabbuildvariables/executables'...
Listing './lib/python3.5/site-packages/gitlabbuildvariables/tests'...
Compiling './lib/python3.5/site-packages/gitlabbuildvariables/tests/_common.py'...
***   File "./lib/python3.5/site-packages/gitlabbuildvariables/tests/_common.py", line 93
    self._gitlab_location = f"http://{self._gitlab_service.host}:{self._gitlab_service.ports[_GITLAB_PORT]}"
                                                                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gitlabbuildvariables/tests/executables'...
Compiling './lib/python3.5/site-packages/gitlabbuildvariables/tests/executables/test_gitlab_set_variables.py'...
***   File "./lib/python3.5/site-packages/gitlabbuildvariables/tests/executables/test_gitlab_set_variables.py", line 30
    exports += "\n".join({f"export {key}={value}" for key, value in EXAMPLE_VARIABLES_1.items()})
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gitlabbuildvariables/update'...
Listing './lib/python3.5/site-packages/gitlabbuildvariables-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_dictdiffer-1.0.egg-info'...
Listing './lib/python3.5/site-packages/python_gitlab-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
